fixed scrollbar appearing in loading screen

--- a/Pokewordle/wwwroot/css/game.css
+++ b/Pokewordle/wwwroot/css/game.css
@@ -1,23 +1,3 @@
-/*body {
-    background-color: #000000;
-    color: #534265;
-    font-family: "Lucida Console", Monaco, monospace;
-    font-size: 15px;
-    margin: 20px;
-    padding: 0;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    display: grid;
-} */
-
-.page-content {
-    /*background: #1e1e1e;*/
-    /*background: red;*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-}
-
 #game-container {
     /*background-image: linear-gradient(315deg, #2f2f2f, #383838);*/
     /*background:  linear-gradient(315deg, rgba(33,4,41,1) 9%, rgba(5,28,71,1) 66%);*/
